<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Main Application -->
    <string name="app_name">Krissy Tosi</string>
    <string name="photosets">Portfolios</string>
    <string name="store">Store</string>
    <string name="blog">Blog</string>
    <string name="contact">Contact</string>
    <string name="loading">Loading &#8230; just a minute</string>
    <string name="no_network">Can\'t access the internet. Please check your network connection.</string>
    <string name="no_api">There was an error. Please try again later.</string>
    <string name="try_again">Try Again.</string>
    <string name="number_of_images">%1$d images</string>
    <string name="buy_now">Buy Now!</string>
    <string name="detail_view_quantity">Quantity: %1$s</string>
    <string name="detail_view_quantity_one">Only one available.</string>
    <string name="detail_view_quantity_n">%1$d available.</string>
    <string name="detail_view_made">Made: %1$s</string>
    <string name="share_this">Share This</string>
    <string name="contact_email">Shoot me an email at krissy@krissytosi.com</string>
    <string name="contact_web">I\'m on the web at http://www.krissytosi.com</string>
    <string name="contact_store">My full Etsy store is available at http://cottagefarm.etsy.com</string>
    <string name="contact_twitter">I tweet from time to time at http://www.twitter.com/cottagefarm</string>
    <string name="contact_blog">My blog is updated periodically at http://cottagefarm.blogspot.com</string>
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="tracking_preference">Tracking</string>
    <string name="tracking_preference_summary">Allow tracking of interactions with the application to gain a better understanding of what sections of the application are most popular.</string>
    <!-- Application Update -->
    <string name="app_update_received">Thanks for updating!</string>
    <!-- Showcase Views -->
    <string name="showcase_portfolio_header">Swipeable Portfolios</string>
    <string name="showcase_portfolio_runner">Portfolios contain multiple photos. Swipe from left to right to go through all the photos in a portfolio.</string>
</resources>