<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/base_fragment"
        layout="@layout/base_fragment" />

    <TextView
        style="@style/KTContactText"
        android:autoLink="email"
        android:text="@string/contact_email" />

    <TextView
        style="@style/KTContactText"
        android:autoLink="web"
        android:text="@string/contact_web" />

    <TextView
        style="@style/KTContactText"
        android:autoLink="web"
        android:text="@string/contact_store" />

    <TextView
        style="@style/KTContactText"
        android:autoLink="web"
        android:text="@string/contact_twitter" />

    <TextView
        style="@style/KTContactText"
        android:autoLink="web"
        android:text="@string/contact_blog" />

</LinearLayout>