<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/loading_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/loading"
        android:textColor="@android:color/white" />

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/loading_message"
        android:gravity="center_vertical"
        android:indeterminateOnly="true"
        android:paddingRight="@dimen/dbl"
        android:visibility="gone" />

    <TextView
        android:id="@+id/no_network_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_network"
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <Button
        android:id="@+id/no_network_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_network_message"
        android:gravity="center"
        android:text="@string/try_again"
        android:textColor="@android:color/white"
        android:visibility="gone" />

</RelativeLayout>